--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ Django==5.1.6
 django-allauth==65.4.1
 django-cloudinary-storage==0.3.0
 django-summernote==0.8.20.0
+gunicorn==23.0.0
 idna==3.10
+packaging==25.0
 pillow==11.1.0
 psycopg2-binary==2.9.10
 requests==2.32.3
